# data-science-frameworks-sem2

./: .gitignore  PLAN.md  README.md  kaban.md  lab-01.ipynb  main.ipynb  pyproject.toml  requirements.txt
data/: annotations.json
