[project]
name = "data-science-frameworks-sem2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pandoc>=2.4",
    "pycocotools>=2.0.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torcheval>=0.0.7",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
]
